[tool.poetry]
name = "hillel"
version = "0.2.0"
description = "Love Ukraine"
authors = ["Kirill <fake@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
